<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/main4"
    android:padding="16dp">

    <ImageView
        android:id="@+id/playerChoiceImageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="100dp"
        android:src="@drawable/ic_voce"
        android:contentDescription="@string/player_choice" />

    <ImageView
        android:id="@+id/computerChoiceImageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/playerChoiceImageView"
        android:layout_marginTop="32dp"
        android:src="@drawable/ic_adv"
        android:contentDescription="@string/computer_choice" />

    <Button
        android:id="@+id/rockButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/black"
        android:layout_below="@id/computerChoiceImageView"
        android:layout_marginTop="48dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="16dp"
        android:text="@string/rock" />

    <Button
        android:id="@+id/paperButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/black"
        android:layout_below="@id/computerChoiceImageView"
        android:layout_marginStart="32dp"
        android:layout_marginTop="48dp"
        android:layout_toEndOf="@id/rockButton"
        android:text="@string/paper" />

    <Button
        android:id="@+id/scissorsButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/black"
        android:layout_below="@id/computerChoiceImageView"
        android:layout_marginStart="32dp"
        android:layout_marginTop="48dp"
        android:layout_toEndOf="@id/paperButton"
        android:text="@string/scissors" />

    <TextView
        android:id="@+id/resultTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/rockButton"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="60dp"
        android:textSize="24sp"
        android:textStyle="bold"
        android:visibility="gone" />

</RelativeLayout>